--- a/src/styles.css
+++ b/src/styles.css
@@ -45,6 +45,7 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  justify-self: center;
   align-items: center;
   padding: 2rem 5rem;
 
