--- a/src/mobile.css
+++ b/src/mobile.css
@@ -1,29 +1,75 @@
 @media screen and (max-width: 750px) {
-    .landing-section {
-        flex-direction: column;
-        justify-content: start;
-
-        padding: 3rem 0rem;
+    :root {
+        overflow-x: hidden;
     }
 
-    .skills-section {
-        margin: 0rem;
-        background-color: var(--color-black);
-        
-        padding: 5rem 1rem;
-    }
+  .landing-section {
+    flex-direction: column;
+    justify-content: start;
 
-    .skill-card {
-        height: 14rem;
-        width: 10rem;
-        padding: 1rem;
-    }
+    padding: 3rem 0rem;
+  }
 
-    .skill-card-image {
-        height: 10rem;
-    }
+  .landing-section-image {
+    margin: 1rem 0rem;
 
-    .skill-card-name {
-        font-size: 1.3rem;
-    }
+    width: 100%;
+    height: auto;
+  }
+
+  .landing-section-hello {
+    font-size: 2.5rem;
+  }
+
+  .landing-section-name {
+    font-size: 3rem;
+    letter-spacing: 0.15rem;
+  }
+
+  .landing-section-description {
+    margin: 0rem;
+    font-size: 1.5rem;
+
+    width: 23rem;
+  }
+
+  .landing-section-button-list {
+    margin: 0.5rem 0rem;
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  .landing-section-button {
+    gap: 1rem;
+    
+    font-size: 1.5rem;
+  }
+
+  .landing-section-button > img {
+    width: 2rem;
+    height: 2rem;
+  }
+
+  .skills-section {
+    margin: 0rem;
+    background-color: var(--color-black);
+
+    padding: 5rem 1rem;
+  }
+
+  .skill-card {
+    height: 14rem;
+    width: 10rem;
+    padding: 1rem;
+  }
+
+  .skill-card-image {
+    height: 10rem;
+  }
+
+  .skill-card-name {
+    font-size: 1.3rem;
+  }
+
+
 }
