--- a/src/mobile.css
+++ b/src/mobile.css
@@ -7,13 +7,34 @@
     flex-direction: column;
     justify-content: stretch;
 
-    padding: 3rem 1rem;
+    width: 100%;
+
+    padding: 2rem 0rem;
+  }
+
+  .landing-section-content {
+    display: flex;
+    flex-direction: column;
+  
+    padding: 0rem 0rem;
+
+    gap: 0.5rem;
+  }
+
+  .landing-section-content-header {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+
+    padding: 0rem 1rem;
+
+    gap: 0.2rem;
   }
 
   .landing-section-image {
     margin: 1rem 0rem;
 
-    width: 100%;
+    width: 90%;
     height: auto;
   }
 
@@ -30,12 +51,17 @@
     margin: 0rem;
     font-size: 1.5rem;
 
+    padding: 0rem 1rem;
+
     width: 23rem;
   }
 
   .landing-section-button-list {
     margin: 0.5rem 0rem;
     flex-direction: column;
+
+    padding: 0rem 1rem;
+
     gap: 1rem;
   }
 
