--- a/src/styles.css
+++ b/src/styles.css
@@ -31,7 +31,7 @@ body {
   margin: 0rem;
   background-color: var(--color-black);
 
-  padding: 5rem 10rem;
+  padding: 5rem 10rem 8rem;
 }
 
 .section-title {
