--- a/src/mobile.css
+++ b/src/mobile.css
@@ -15,7 +15,7 @@
   .landing-section-content {
     display: flex;
     flex-direction: column;
-  
+
     padding: 0rem 0rem;
 
     gap: 0.5rem;
@@ -67,8 +67,17 @@
 
   .landing-section-button {
     gap: 1rem;
+    padding: 0.2rem 0.5rem;
 
     font-size: 1.5rem;
+    border: 2px solid var(--color-black);
+    border-radius: 10px;
+  }
+
+  .landing-section-button:hover {
+    color: var(--color-black);
+    font-weight: normal;
+    transform: none;
   }
 
   .landing-section-button > img {
@@ -87,10 +96,6 @@
     height: 12rem;
     width: 8rem;
     padding: 1rem;
-  }
-
-  .skill-card:hover {
-    transform: none;
   }
 
   .skill-card-image {
@@ -119,7 +124,7 @@
 
     gap: 0.5rem;
 
-    box-shadow: 0rem 0.1rem 1rem rgba(0, 0, 0, 0.3);
+    box-shadow: none;
 
     display: flex;
     flex-direction: row;
@@ -170,6 +175,10 @@
     padding-bottom: 1rem;
     display: flex;
     align-items: end;
+  }
+
+  .project-card-github:hover {
+    transform: none;
   }
 
   .project-card-github > img {
