--- a/src/styles.css
+++ b/src/styles.css
@@ -125,15 +125,18 @@ body {
   gap:0.5rem;
   
   margin: 0rem;
-  padding: 0.2rem 0.5rem;
-  border-radius: 10px;
-  
-  background-color: var(--color-red);
-  border: 2px solid var(--color-black);
 
   text-decoration: none;
   color: var(--color-black);
   font-size: 1rem;
+
+  transition: transform ease-in-out 0.05s;
+}
+
+.landing-section-button:hover {
+  color: var(--color-red);
+  font-weight: bold;
+  transform: scale(1.05);
 }
 
 .landing-section-button > img {
@@ -141,7 +144,6 @@ body {
   height: 1.5rem;
 
   border-radius: 6px;
-  color: var(--color-black);
 }
 
 .flex-container {
@@ -164,19 +166,13 @@ body {
   background-color: var(--color-black);
   border: 3px solid var(--color-red);
   border-radius: 10px;
-  box-shadow: 0rem 0.1rem 1rem rgba(0, 0, 0, 0.3);
+  box-shadow: 0rem 0.1rem 0.2rem rgba(0, 0, 0, 0.3);
 
   display: flex;
   flex-direction: column;
   gap: 1rem;
 
   align-items: space-around;
-
-  transition: transform ease-in-out 0.07s;
-}
-
-.skill-card:hover {
-  transform: scale(1.05);
 }
 
 .skill-card-image {
@@ -212,7 +208,6 @@ body {
   gap: 1rem;
 
   border-radius: 10px;
-  /* border: 2px solid var(--color-red); */
   color: var(--color-white);
   background-size: contain;
   box-shadow: 0rem 0.1rem 1rem rgba(0, 0, 0, 0.3);
@@ -289,6 +284,12 @@ body {
   padding-bottom: 1rem;
   display: flex;
   align-items: end;
+
+  transition: transform ease-in-out 0.05s;
+}
+
+.project-card-github:hover {
+  transform: scale(1.1);
 }
 
 .project-card-github > img {
