--- a/src/mobile.css
+++ b/src/mobile.css
@@ -70,7 +70,7 @@
     padding: 0.2rem 0.5rem;
 
     font-size: 1.5rem;
-    border: 2px solid var(--color-black);
+    border: 1px solid var(--color-black);
     border-radius: 10px;
   }
 
@@ -93,17 +93,23 @@
   }
 
   .skill-card {
-    height: 12rem;
-    width: 8rem;
-    padding: 1rem;
+    flex-direction: row;
+    align-items: center;
+    justify-content: start;
+    padding: 0.5rem 1rem;
+
+    height: 6rem;
+    width: fit-content;
+
+    border: 1px solid var(--color-red);
   }
 
   .skill-card-image {
-    height: 18rem;
+    height: 4rem;
   }
 
   .skill-card-name {
-    font-size: 1.1rem;
+    font-size: 1.3rem;
   }
 
   .projects-section {
