Removed Github logo from project card on mobile. Made entire card link to repo

--- a/src/mobile.css
+++ b/src/mobile.css
@@ -98,18 +98,18 @@
     justify-content: start;
     padding: 0.5rem 1rem;
 
-    height: 6rem;
+    height: 5.5rem;
     width: fit-content;
 
     border: 1px solid var(--color-red);
   }
 
   .skill-card-image {
-    height: 4rem;
+    height: 3.5rem;
   }
 
   .skill-card-name {
-    font-size: 1.3rem;
+    font-size: 1.1rem;
   }
 
   .projects-section {
@@ -147,13 +147,13 @@
 
   .project-card-top-line {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: start;
-    align-items: start;
+    align-items: center;
   }
 
   .project-card-chip-list {
-    padding-left: 0rem;
+    padding-left: 0.5rem;
     display: flex;
     flex-direction: row;
     justify-content: start;
@@ -177,9 +177,7 @@
   }
 
   .project-card-github {
-    padding-left: 1rem;
-    padding-bottom: 1rem;
-    display: flex;
+    display: none;
     align-items: end;
   }
 
