project skill chips wrap to next line on overflow

--- a/src/styles.css
+++ b/src/styles.css
@@ -258,6 +258,7 @@ a:link {
   padding-left: 1rem;
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   gap: 0.2rem;
 
   list-style-type: none;
