--- a/src/mobile.css
+++ b/src/mobile.css
@@ -9,7 +9,7 @@
 
     width: 100%;
 
-    padding: 2rem 0rem;
+    padding: 0 0 2rem 0rem;
   }
 
   .landing-section-content {
@@ -33,6 +33,8 @@
 
   .landing-section-image {
     margin: 1rem 0rem;
+
+    border-radius: 10px;
 
     width: 90%;
     height: auto;
