--- a/src/styles.css
+++ b/src/styles.css
@@ -1,332 +1,176 @@
-@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Space+Grotesk&display=swap");
 
 :root {
-  --color-black: #2c2c2c;
-  --color-red: #ff6a6a;
-  --color-white: #ededed;
+    --color-black: #2c2c2c;
+    --color-red: #ff6a6a;
+    --color-white: #ededed;
 }
 
 body {
-  font-family: 'Space Grotesk';
-  color: var(--color-black);
-  margin: 0rem;
-  background-color: var(--color-white);
-}
-
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-
-a, 
-a:visited, 
-a:active, 
-a:hover,
-a:link {
-  text-decoration: inherit;
-  color: inherit;
+    font-family: "Space Grotesk";
+    color: var(--color-black);
+    margin: 0rem;
+    background-color: var(--color-white);
 }
 
 .skew {
-  transform: skewy(-3deg);
+    transform: skewy(-3deg);
 }
 
 .unskew {
-  transform: skewy(3deg);
-}
-
-.skills-section {
-  margin: 0rem;
-  background-color: var(--color-black);
-
-  padding: 5rem 10rem 8rem;
+    transform: skewy(3deg);
 }
 
 .section-title {
-  margin: 0rem 0rem 2rem 0rem;
+    margin: 0rem 0rem 2rem 0rem;
 
-  text-align: center;
-  font-size: 2.5rem;
-  text-decoration: underline;
+    text-align: center;
+    font-size: 2.5rem;
+    text-decoration: underline;
 }
 
 .landing-section {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  justify-self: center;
-  align-items: center;
-  padding: 2rem 5rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    justify-self: center;
+    align-items: center;
+    padding: 2rem 5rem;
 
-  background-color: var(--color-white);
+    background-color: var(--color-white);
 }
 
 .landing-section-image {
-  height: 25rem;
-  margin: 0rem;
+    height: 25rem;
+    margin: 0rem;
 
-  mix-blend-mode: darken;
+    mix-blend-mode: darken;
 
-  border-radius: 360px;
+    border-radius: 360px;
 }
 
 .landing-section-content {
-  display: flex;
-  flex-direction: column;
+    display: flex;
+    flex-direction: column;
 
-  gap: 0.7rem;
+    gap: 0.7rem;
 }
 
 .landing-section-content-header {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 0.2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 0.2rem;
 }
 
 .landing-section-hello {
-  margin: 0rem;
-  font-size: 2rem;
+    margin: 0rem;
+    font-size: 2rem;
 }
 
 .landing-section-name {
-  display: inline-block;
-  margin: 0rem;
-  padding-right: 0.5rem;
-  
-  border-radius: 10px;
-  border: 3px solid var(--color-black);
-  
-  background-color: var(--color-black);
-  font-size: 2.5rem;
-  color: var(--color-white);
-  letter-spacing: 0.15rem;
+    display: inline-block;
+    margin: 0rem;
+    padding-right: 0.5rem;
+
+    border-radius: 10px;
+    border: 3px solid var(--color-black);
+
+    background-color: var(--color-black);
+    font-size: 2.5rem;
+    color: var(--color-white);
+    letter-spacing: 0.15rem;
 }
 
 .landing-section-name > span {
-  background-color: var(--color-white);
-  border-radius: 10px;
+    background-color: var(--color-white);
+    border-radius: 10px;
 
-
-  padding-inline: 0.5rem;
-  color: var(--color-black);
+    padding-inline: 0.5rem;
+    color: var(--color-black);
 }
 
 .landing-section-description {
-  margin: 0rem;
-  font-size: 1rem;
+    margin: 0rem;
+    font-size: 1rem;
 
-  width: 23rem;
+    width: 23rem;
 }
 
 .landing-section-button-list {
-  margin: 0.5rem 0rem;
-  display: flex;
-  flex-direction: row;
-  padding: 0rem;
-  list-style: none;
-  gap: 1rem;
+    display: flex;
+    flex-direction: row;
+    padding: 0rem;
+    list-style: none;
+    gap: 1rem;
 }
 
 .landing-section-button {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  gap:0.5rem;
-  
-  margin: 0rem;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 0.5rem;
 
-  text-decoration: none;
-  color: var(--color-black);
-  font-size: 1rem;
+    margin: 0rem;
 
-  transition: transform ease-in-out 0.05s;
+    text-decoration: none;
+    color: var(--color-black);
+    font-size: 1rem;
+
+    transition: transform ease-in-out 0.05s;
 }
 
 .landing-section-button:hover {
-  color: var(--color-red);
-  font-weight: bold;
-  transform: scale(1.05);
+    color: var(--color-red);
+    font-weight: bold;
+    transform: scale(1.05);
 }
 
 .landing-section-button > img {
-  width: 1.5rem;
-  height: 1.5rem;
+    width: 1.5rem;
+    height: 1.5rem;
 
-  border-radius: 6px;
+    border-radius: 6px;
 }
 
 .flex-container {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 
-  gap: 1rem;
+    gap: 1rem;
+}
+
+.skills-section {
+    margin: 0rem;
+    background-color: var(--color-black);
+
+    padding: 5rem 10rem 8rem;
 }
 
 .skills-container {
-  justify-content: center;
-}
-
-.skill-card {
-  width: 8rem;
-  height: auto;
-  padding: 1rem 0.5rem;
-
-  background-color: var(--color-black);
-  border: 3px solid var(--color-red);
-  border-radius: 10px;
-  box-shadow: 0rem 0.1rem 0.2rem rgba(0, 0, 0, 0.3);
-
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-
-  align-items: space-around;
-}
-
-.skill-card-image {
-  color: var(--color-red);
-
-  height: 6rem;
-  width: auto;
-}
-
-.skill-card-name {
-  margin: 0rem;
-
-  color: var(--color-red);
-  text-align: center;
-  font-size: 1.1rem;
+    justify-content: center;
 }
 
 .projects-section {
-  margin: 0rem;
-  background-color: var(--color-white);
+    margin: 0rem;
+    background-color: var(--color-white);
 
-  padding: 5rem 10rem;
+    padding: 5rem 10rem;
 }
 
 .projects-container {
-  justify-content: center;
-}
-
-.project-card {
-  width: 32rem;
-  height: 18rem;
-
-  gap: 1rem;
-
-  border-radius: 10px;
-  color: var(--color-white);
-  background-size: contain;
-  box-shadow: 0rem 0.1rem 1rem rgba(0, 0, 0, 0.3);
-
-  display: flex;
-  flex-direction: row;
-
-  transition: transform ease-in-out 0.08s;
-}
-
-.project-card:hover {
-  transform: scale(1.01);
-}
-
-.project-card-black-area {
-  background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.9));
-
-  height: 9rem;
-  width: 100%;
-  border-radius: 10px;
-
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-
-  align-self: end;
-  align-items: end;
-  padding: 0rem 1rem;
-}
-
-.project-card-name {
-  font-size: 1.5rem;
-  margin: 0rem;
-  display: inline;
-}
-
-.project-card-top-line {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-
-.project-card-chip-list {
-  margin: 0rem;
-  padding-left: 1rem;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  gap: 0.2rem;
-
-  list-style-type: none;
-}
-
-.project-card-chip {
-  background: var(--color-black);
-  font-size: 0.8rem;
-
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  gap: 0.3rem;
-
-  padding: 0.15rem 0.4rem 0.15rem 0.3rem;
-
-  border: 0.1rem solid var(--color-red);
-  border-radius: 24px;
-}
-
-.project-card-chip-cirle {
-  display: inline-block;
-
-  width: 0.5rem;
-  height: 0.5rem;
-
-  border-radius: 50px;
-  background-color: var(--color-red);
-}
-
-.prject-card-description {
-  margin-block: 0rem 1rem;
-}
-
-.project-card-github {
-  padding-left: 1rem;
-  padding-bottom: 1rem;
-  display: flex;
-  align-items: end;
-
-  transition: transform ease-in-out 0.05s;
-}
-
-.project-card-github:hover {
-  transform: scale(1.1);
-}
-
-.project-card-github > img {
-  width: 3rem;
-  height: 3rem;
+    justify-content: center;
 }
 
 .red {
-  color: var(--color-red);
+    color: var(--color-red);
 }
 
 .black {
-  color: var(--color-black);
+    color: var(--color-black);
 }
 
 .white {
-  color: var(--color-white);
+    color: var(--color-white);
 }
